--- a/source/_posts/2018-04-08-欠下的总要还.md
+++ b/source/_posts/2018-04-08-欠下的总要还.md
@@ -10,8 +10,9 @@ date: 2018-04-08 23:24:38
 ---
 Good Good Study,Day Day UP!
 
-奋力批改欠下的作业，一句话，欠下的总要归还的。
+一句话，欠下的总要归还的。
 
+想法太多，行动太少，以至于会有遗憾。应该极尽可能的去加油。
 
 <!-- more -->
 
