--- a/themes/next/languages/ru.yml
+++ b/themes/next/languages/ru.yml
@@ -4,7 +4,6 @@ title:
   category: Категория
   tag: Тэг
   schedule: Календарь
-author: Автор
 menu:
   home: Главная
   archives: Архив
@@ -91,7 +90,7 @@ accessibility:
   next_page: Следующая страница
 symbols_count_time:
   count: Кол-во символов в статье
-  count_total: Общее кол-во символов в записях
+  count_total: Общее кол-во символов
   time: Время чтения
-  time_total: Время чтения всего сайта
+  time_total: Общее время чтения
   time_minutes: мин.
